# PatternsPractice

./: .gitignore  CMakeLists.txt  main.cpp
Behavioral patterns/Iterator/: CMakeLists.txt  Test.cpp
Behavioral patterns/Iterator/Header/: Array.h  ArrayIterator.h  IterableCollection.h  Iterator.h
Behavioral patterns/Iterator/Source/: Array.cpp  ArrayIterator.cpp
Creational patterns/Abstract factory/: CMakeLists.txt  Test.cpp  uml.drawio
Creational patterns/Abstract factory/Headers/: Archer.h  GangFactory.h  OrcArcher.h  OrcGangFactory.h  OrcWarrior.h  SkeletonArcher.h  SkeletonGangFactory.h  SkeletonWarrior.h  Warrior.h
Creational patterns/Abstract factory/Source/: OrcArcher.cpp  OrcGangFactory.cpp  OrcWarrior.cpp  SkeletonArcher.cpp  SkeletonGangFactory.cpp  SkeletonWarrior.cpp
Creational patterns/Builder/: CMakeLists.txt  Test.cpp  umlBuilder.drawio
Creational patterns/Builder/Headers/: BlackDogBuilder.h  Dog.h  DogBuilder.h  WhiteDogBuilder.h
Creational patterns/Builder/Source/: BlackDogBuilder.cpp  Dog.cpp  WhiteDogBuilder.cpp
Creational patterns/Factory method/: CMakeLists.txt  Test.cpp  uml.drawio
Creational patterns/Factory method/Headers/: EnemyFactory.h  IEnemy.h  Orc.h  OrcFactory.h  Skeleton.h  SkeletonFactory.h
Creational patterns/Factory method/Source/: Orc.cpp  OrcFactory.cpp  Skeleton.cpp  SkeletonFactory.cpp
Creational patterns/Protoype/: umlPrototype.drawio
Structural patterns/Decorator Wrapper/: CMakeLists.txt  Test.cpp
Structural patterns/Decorator Wrapper/Headers/: ActualImplementation.h  Feature1.h  Feature2.h  UsefulThing.h  (+1 more)
(+4 files in other folders)
